--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <form
                         class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                         <div class="input-group">
-
+                          <input size="1" style="visibility: hidden;">
                             <input id="search_bar" type="text" class="form-control bg-light border-0 small"  placeholder="Where are you currently?"
                                 aria-label="Search" aria-describedby="basic-addon2" style="border-radius: 5px;">
                                 <div class="input-group-append">
